feat: Main map page, unlinked map examples.

--- a/frontend/flutter/achez/android/app/src/main/AndroidManifest.xml
+++ b/frontend/flutter/achez/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="achez"
+        android:label="Achez by Panal"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -29,5 +29,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDk7ZEnWHCW0RWBYOr3oejnGkyw7LDfLXA"/>
     </application>
 </manifest>
